--- a/src/app/shared/components/settings-sidebar/toggle-settings-button/toggle-settings-button.component.scss
+++ b/src/app/shared/components/settings-sidebar/toggle-settings-button/toggle-settings-button.component.scss
@@ -39,3 +39,11 @@
     transform: scale3d(.8, .8, .8);
   }
 }
+
+@media (max-width: 768px) {
+
+  .toggle-settings {
+    border-top-left-radius: 0 !important;
+    border-bottom-right-radius: .5rem;
+  }
+}
