--- a/src/app/shared/components/settings-sidebar/settings-content/settings-content.component.scss
+++ b/src/app/shared/components/settings-sidebar/settings-content/settings-content.component.scss
@@ -63,6 +63,11 @@
 
   .form-container {
     margin: 15vh 20px;
+
+    .clear-btn {
+      display: flex;
+      margin: 0 0 2vh auto;
+    }
   }
 }
 
@@ -72,7 +77,7 @@
     height: calc(100vh - 7.5rem);
 
     .form-container {
-      margin: 6vh 20px;
+      margin: 3vh 20px 6vh 20px;
     }
   }
 }
