--- a/src/app/pages/device-options/dim-level/dim-level.component.scss
+++ b/src/app/pages/device-options/dim-level/dim-level.component.scss
@@ -24,5 +24,8 @@
     position: absolute;
     height: 2.2rem;
     width: 2.2rem;
+    border-radius: 2.2rem;
+    box-shadow: 0 8px 20px 0 rgba(40, 37, 89, 0.6);
+    cursor: pointer;
   }
 }
