dim event called

--- a/src/app/pages/device-options/dim-level/dim-level.component.scss
+++ b/src/app/pages/device-options/dim-level/dim-level.component.scss
@@ -22,6 +22,10 @@
       margin: 0 0 1.5rem 0;
     }
 
+    #dim-progress {
+      cursor: pointer;
+    }
+
     .radio-container {
       display: flex;
 
