--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -57,3 +57,23 @@
     background: rgba(0,0,0,0);
   }
 }
+
+@keyframes enterleft {
+  from {
+    left: -100%;
+  }
+
+  to {
+    left: 0;
+  }
+}
+
+@keyframes exitleft {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: -100%;
+  }
+}
