--- a/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
+++ b/src/app/shared/components/menu-sidebar/menu-sidebar.component.scss
@@ -36,16 +36,15 @@
     height: 100%;
     position: fixed;
     top: 0;
-    left: 0;
     animation-duration: 500ms;
     overflow: hidden;
 
     &.in {
-      animation-name: slidein;
+      animation-name: enterleft;
     }
 
     &.out {
-      animation-name: slideout;
+      animation-name: exitleft;
     }
 
     #menu {
