--- a/src/_animations.scss
+++ b/src/_animations.scss
@@ -58,13 +58,13 @@
   }
 }
 
-@keyframes enterleft {
+@keyframes enterright {
   from {
-    left: -100%;
+    right: -100%;
   }
 
   to {
-    left: 0;
+    right: 0;
   }
 }
 
