--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -9,13 +9,17 @@
             <nd-status-card [title]="device.Name" (statusChanged)="statusChanged($event, device)"
               [on]="isSwitchOn(device)" [disabled]="device.HaveTimeout" [status]="device[statusKey]"
               [loading]="switchLoading && clickedIdx === device.idx" (optionsClick)="onOptionsClick(device.idx)">
-              <i *ngIf="icon[device.Image]?.startsWith('nb'); else svgIcon" [ngClass]="icon[device.Image]"></i>
 
-              <ng-template #svgIcon>
-                <nd-svg-icon class="nd-icon {{ device.Status }}" [name]="icon[device.Image]"
-                  [status]="device.Status">
-                </nd-svg-icon>
-              </ng-template>
+              <i *ngIf="icon[device.Image]?.startsWith('nb')" [ngClass]="icon[device.Image]"></i>
+
+              <nd-svg-icon *ngIf="icon[device.Image]?.startsWith('nd')" class="nd-icon {{ device[statusKey] }}"
+                [name]="icon[device.Image]" [status]="device[statusKey]">
+              </nd-svg-icon>
+
+              <!-- <nb-icon *ngIf="filter === 'temp'" class="temp-icon"
+                icon="{{ device.Temp ? 'thermometer-outline' : 'droplet-outline' }}">
+              </nb-icon> -->
+
             </nd-status-card>
           </div>
         </ng-container>
