--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -16,9 +16,9 @@
                 [name]="icon[device.Image]" [status]="device[statusKey]">
               </nd-svg-icon>
 
-              <!-- <nb-icon *ngIf="filter === 'temp'" class="temp-icon"
+              <nb-icon *ngIf="filter === 'temp'" class="temp-icon"
                 icon="{{ device.Temp ? 'thermometer-outline' : 'droplet-outline' }}">
-              </nb-icon> -->
+              </nb-icon>
 
             </nd-status-card>
           </div>
