--- a/src/app/shared/components/settings-sidebar/settings-sidebar.component.scss
+++ b/src/app/shared/components/settings-sidebar/settings-sidebar.component.scss
@@ -52,7 +52,7 @@
 
     .settings-button {
       bottom: 0;
-      left: calc(50% - 1.375rem);
+      left: calc(50vw - 1.375rem);
     }
 
     .settings-container {
