--- a/src/app/pages/device-options/device-options.component.scss
+++ b/src/app/pages/device-options/device-options.component.scss
@@ -7,7 +7,16 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  animation: appear 400ms ease-in-out;
+  animation-duration: 500ms;
+  animation-timing-function: ease-in-out;
+
+  &.appear {
+    animation-name: appear;
+  }
+
+  &.disappear {
+    animation-name: disappear;
+  }
 
   .close-icon {
     margin: 0 0 2rem auto;
