--- a/src/app/pages/device-options/device-icon/device-icon.component.scss
+++ b/src/app/pages/device-options/device-icon/device-icon.component.scss
@@ -17,36 +17,40 @@
 
 .icon-container {
   display: flex;
-  flex-direction: column;
   justify-content: center;
 
-  .title {
-    margin: 0 0 1rem 0;
-  }
-
-  .icon-form {
+  .icon-form-container {
     display: flex;
-    justify-content: center;
-    border-radius: 0.5rem;
-    margin: 0 auto;
+    flex-direction: column;
 
-    .icon-form:focus-within {
-      outline: none;
+    .title {
+      margin: 0 0 1rem 0;
     }
 
-    .icon-input {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: 0;
-    }
+    .icon-form {
+      display: flex;
+      justify-content: center;
+      border-radius: 0.5rem;
+      margin: 0 auto;
 
-    .icon-btn {
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
+      .icon-form:focus-within {
+        outline: none;
+      }
 
-    .icon-input:focus, .icon-btn:focus {
-      border-color: none;
-      box-shadow: none;
+      .icon-input {
+        border-top-right-radius: 0;
+        border-bottom-right-radius: 0;
+      }
+
+      .icon-btn {
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+      }
+
+      .icon-input:focus, .icon-btn:focus {
+        border-color: none;
+        box-shadow: none;
+      }
     }
   }
 }
