wip tabset  anim

--- a/src/app/pages/device-options/dim-level/dim-level.component.scss
+++ b/src/app/pages/device-options/dim-level/dim-level.component.scss
@@ -37,6 +37,7 @@
           height: 2.2rem;
           width: 2.2rem;
           border-radius: 2.2rem;
+          background: radial-gradient(rgb(255,255,255), rgb(152,152,152));
           box-shadow: 0 8px 20px 0 rgba(40, 37, 89, 0.6);
           cursor: pointer;
           bottom: 1.6rem;
