--- a/src/app/pages/device-options/color-picker/color-picker.component.scss
+++ b/src/app/pages/device-options/color-picker/color-picker.component.scss
@@ -13,11 +13,13 @@
     nb-tab {
       overflow: hidden;
       animation-duration: 2s;
+      animation-delay: 900ms;
       animation-timing-function: ease-in-out;
+      transform: scaleY(0);
 
       &.active {
-        animation-delay: 1s;
         animation-name: slidedown;
+        transform: scaleY(1);
       }
 
       &.inactive {
@@ -48,6 +50,7 @@
       }
 
       .slider {
+        transform: inherit;
         appearance: none;
         width: 100%;
         height: 1rem;
