component + lib versions

--- a/src/app/pages/device-options/device-options.component.scss
+++ b/src/app/pages/device-options/device-options.component.scss
@@ -27,3 +27,11 @@
     cursor: pointer;
   }
 }
+
+@media (min-width: 1200px) {
+
+  .options-container {
+    width: 75%;
+    margin: 0 auto;
+  }
+}
