--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 @import '~@nebular/theme/styles/globals';
 
 @import './app/shared/components/header/header-theme';
+@import './app/pages/device-options/history/history-theme';
 
 .no-devices {
   height: 100%;
