--- a/src/app/pages/device-options/device-icon/device-icon.component.scss
+++ b/src/app/pages/device-options/device-icon/device-icon.component.scss
@@ -54,3 +54,18 @@
     }
   }
 }
+
+@media (min-width: 768px) {
+
+  nb-card {
+    height: inherit;
+    margin: inherit;
+    width: inherit;
+
+    nb-card-body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
