--- a/src/app/pages/device-options/device-options.component.scss
+++ b/src/app/pages/device-options/device-options.component.scss
@@ -25,4 +25,41 @@
     height: 2rem;
     cursor: pointer;
   }
+
+  .small-blocks {
+    display: flex;
+    flex-wrap: wrap;
+
+    .small-block {
+      padding: 0;
+    }
+  }
+
+  .big-blocks {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 768px) {
+
+  .options-container {
+
+    .small-blocks {
+      margin: 1rem 0;
+
+      .small-block {
+        display: flex;
+        justify-content: space-evenly;
+        height: 8rem;
+        margin: 1rem 0;
+        width: 95%;
+      }
+
+      .big-blocks {
+        margin: 0 auto;
+        width: 75%;
+      }
+    }
+  }
 }
