--- a/src/app/pages/device-options/device-icon/device-icon.component.scss
+++ b/src/app/pages/device-options/device-icon/device-icon.component.scss
@@ -9,7 +9,7 @@
     }
 
     .icon-form:focus-within {
-      border-color: nb-theme(input-focus-border-color);
+      border-color: nb-theme(input-basic-focus-border-color);
       box-shadow: 0 0 0 0.375rem nb-theme(color-basic-700);
     }
   }
@@ -51,6 +51,21 @@
         border-color: none;
         box-shadow: none;
       }
+    }
+  }
+}
+
+@media (min-width: 768px) {
+
+  nb-card {
+    height: inherit;
+    margin: inherit;
+    width: inherit;
+
+    nb-card-body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
