--- a/src/app/pages/device-options/name/name.component.scss
+++ b/src/app/pages/device-options/name/name.component.scss
@@ -3,7 +3,7 @@
 @include nb-install-component() {
 
   .name-form:focus-within {
-    border-color: nb-theme(input-focus-border-color);
+    border-color: nb-theme(input-basic-focus-border-color);
     box-shadow: 0 0 0 0.375rem nb-theme(color-basic-700);
   }
 }
@@ -34,6 +34,21 @@
     .name-input:focus, .name-btn:focus {
       border-color: none;
       box-shadow: none;
+    }
+  }
+}
+
+@media (min-width: 768px) {
+
+  nb-card {
+    height: inherit;
+    margin: inherit;
+    width: inherit;
+
+    nb-card-body {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 }
