--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -1,27 +1,42 @@
-<ng-container *ngIf="(devices$ | async) as devices">
-  <div class="type-container {{ filter }} {{ navState }}"
-    *ngIf="!!devices.length || navState === 'out'; else noDevices">
-    <ng-container *ngFor="let type of (types$ | async)">
+<ng-container *ngIf="devices$ | async as devices">
+  <div
+    class="type-container {{ filter }} {{ navState }}"
+    *ngIf="!!devices.length || navState === 'out'; else noDevices"
+  >
+    <ng-container *ngFor="let type of types$ | async">
       <span class="type">{{ type }}</span>
 
       <div class="row">
         <ng-container *ngFor="let device of devices">
-          <div class="col-xxxl-3 col-md-6" *ngIf="device.SwitchType === type || device.Type === type">
-
-            <nd-status-card [title]="device.Name" (statusChanged)="statusChanged($event, device)"
-              [on]="isSwitchOn(device)" [disabled]="device.HaveTimeout" [status]="device[statusKey]"
-              [loading]="switchLoading && clickedIdx === device.idx" (optionsClick)="onOptionsClick(device.idx)">
-              <nd-svg-icon *ngIf="((!!icon[device.Image] || type === 'Door Contact') &&
-                getDeviceIcon(device.idx) === 'alert-triangle-outline') else nbIcon"
-                class="nd-icon {{ device[statusKey] }}" [name]="icon[device.Image]"
-                [status]="device[statusKey]">
+          <div
+            class="col-xxxl-3 col-md-6"
+            *ngIf="device.SwitchType === type || device.Type === type"
+          >
+            <nd-status-card
+              [title]="device.Name"
+              (statusChanged)="statusChanged($event, device)"
+              [on]="isSwitchOn(device)"
+              [disabled]="device.HaveTimeout"
+              [status]="device[statusKey]"
+              [loading]="switchLoading && clickedIdx === device.idx"
+              (optionsClick)="onOptionsClick(device.idx)"
+            >
+              <nd-svg-icon
+                *ngIf="
+                  (!!icon[device.Image] || type === 'Door Contact') &&
+                    getDeviceIcon(device.idx) === 'alert-triangle-outline';
+                  else nbIcon
+                "
+                class="nd-icon {{ device[statusKey] }}"
+                [name]="icon[device.Image]"
+                [status]="device[statusKey]"
+              >
               </nd-svg-icon>
               <ng-template #nbIcon>
                 <nb-icon class="temp-icon" [icon]="getDeviceIcon(device.idx)">
                 </nb-icon>
               </ng-template>
             </nd-status-card>
-
           </div>
         </ng-container>
       </div>
@@ -30,7 +45,11 @@
 </ng-container>
 
 <ng-template #noDevices>
-  <div class="no-devices {{ path === 'temperature' ? 'temp' : 'switches' }} {{ navState }}">
+  <div
+    class="no-devices {{ path === 'temperature' ? 'temp' : 'switches' }} {{
+      navState
+    }}"
+  >
     <span>No</span>
     <span>devices</span>
     <span>found</span>
