--- a/src/app/pages/device-options/history/switch-logs/switch-logs.component.scss
+++ b/src/app/pages/device-options/history/switch-logs/switch-logs.component.scss
@@ -1,7 +1,24 @@
+@import 'src/_themes.scss';
+@import 'src/_animations.scss';
+
+@include nb-install-component() {
+  .logs--title-last {
+    font-size: nb-theme(text-heading-6-font-size);
+  }
+
+  .logs--text-more {
+    font-size: nb-theme(text-subtitle-font-size);
+  }
+}
+
 .logs--container {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+
+  a:not([href]) {
+    color: #ffff;
+  }
 }
 
 .logs--table-container {
@@ -9,6 +26,57 @@
   margin: 0 auto;
 }
 
-.logs--cell-container {
+.logs--title-last {
+  text-transform: uppercase;
+  font-style: italic;
+  margin: 0 0 1rem 5%;
+}
+
+.logs--text-more {
+  margin: 1rem 5%;
+  font-style: italic;
+}
+
+.logs--sample-container {
   display: flex;
+  align-items: center;
+  overflow: hidden;
+
+  nb-icon {
+    &.active {
+      color: #ffff;
+    }
+  }
+}
+
+.logs--sample-appear {
+  animation-duration: 400ms;
+  animation-timing-function: ease-in-out;
+  opacity: 1;
+  animation-name: appear;
+}
+
+.logs--sample-disappear {
+  animation-duration: 400ms;
+  animation-timing-function: ease-in-out;
+  opacity: 0;
+  animation-name: disappear;
+}
+
+.logs--sample-slidedown {
+  animation-duration: 400ms;
+  animation-timing-function: ease-in-out;
+  animation-name: slidedown;
+}
+
+.logs--sample-slideup {
+  animation-duration: 400ms;
+  animation-timing-function: ease-in-out;
+  animation-name: slideup;
+}
+
+.logs--btn-container {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1rem;
 }
