DB schema + upgrade (#4)
* new indexeddb schema

* new push service

* wip refacto services

* db initializer

* icon service refact

* wip get device icons new service

* battery + new icons service

* fix no color

* fix db getters

* clean push event

* no async getter :(

* wip no delete sub with dev

* fix sync db

* init subscriptions

* version

--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -13,29 +13,16 @@
             *ngIf="device.SwitchType === type || device.Type === type"
           >
             <nd-status-card
-              [title]="device.Name"
+              [device]="device"
+              [type]="type"
+              [statusKey]="statusKey"
+              [deviceIcons]="deviceIcons$ | async"
               (statusChanged)="statusChanged($event, device)"
               [on]="isSwitchOn(device)"
-              [disabled]="device.HaveTimeout"
               [status]="device[statusKey]"
               [loading]="switchLoading && clickedIdx === device.idx"
               (optionsClick)="onOptionsClick(device.idx)"
             >
-              <nd-svg-icon
-                *ngIf="
-                  (!!icon[device.Image] || type === 'Door Contact') &&
-                    getDeviceIcon(device.idx) === 'alert-triangle-outline';
-                  else nbIcon
-                "
-                class="nd-icon {{ device[statusKey] }}"
-                [name]="icon[device.Image]"
-                [status]="device[statusKey]"
-              >
-              </nd-svg-icon>
-              <ng-template #nbIcon>
-                <nb-icon class="temp-icon" [icon]="getDeviceIcon(device.idx)">
-                </nb-icon>
-              </ng-template>
             </nd-status-card>
           </div>
         </ng-container>
